--- a/style.css
+++ b/style.css
@@ -1,14 +1,54 @@
+
+.weathercard{
+display: grid;
+grid-template-columns: 1fr 3fr;
+}
+
+/* .cityNav{
+  padding-left: 10px;
+} */
+
+.search-bar{
+display: inline;
+}
+
+.weather{
+display: grid;
+grid-template-columns: 1fr 2fr;
+}
+
+.cContent{
+  padding-left: 15px;
+  padding-right: 15px;
+}
+
+.fContent{
+  display: grid;
+grid-template-columns: 1fr 1fr;
+}
+
+.sinput{
+  width: 100px;
+}
+
+img{
+  height: 70px;
+  width: 70px;
+}
+
+.card{
+  border: 0px;
+}
+
 .title{
 color: antiquewhite;
 text-align: center;
 }
 
-
-
 .search-bar{
   margin-bottom: 5px;
 }
 
-.sInput{
-  float: left;
+.dayscard{
+  padding: 0px;
 }
