--- a/style.css
+++ b/style.css
@@ -1,16 +1,11 @@
 
 .weathercard{
 display: grid;
-grid-template-columns: 1fr 3fr;
+grid-template-columns: 1fr 1.5fr 2.5fr;
 }
 
 .search-bar{
 display: inline;
-}
-
-.weather{
-display: grid;
-grid-template-columns: 1fr 2fr;
 }
 
 .cContent{
@@ -48,3 +43,4 @@ text-align: center;
 .dayscard{
   padding: 0px;
 }
+
