--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ flex: 20%;
 .cContent{
   flex:30%;
   padding-left: 15px;
-
+ 
 }
 
 .fContent{
@@ -50,3 +50,11 @@ text-align: center;
   padding: 0px;
 }
 
+
+@media (min-width:500px) {
+.cContent{
+  flex:30%;
+  padding-left: 15px;
+  padding-right: 15px;
+}
+}
